--- a/style/style.css
+++ b/style/style.css
@@ -17,6 +17,7 @@ body{
   max-width:100%;
   max-height:100%;
   overflow:auto;
+  padding-right: 50px;
 }
 
 button{
@@ -38,7 +39,11 @@ button:focus{
 }
 
 .content-right{
-  height: 230px;
+  height: 300px;
+}
+
+#logo{
+  color: black;
 }
 
 #message{
@@ -46,6 +51,6 @@ button:focus{
   color: black;
   text-align: center;
   padding: 30px;
-  margin-top: 26%;
-  margin-left: 5%;
+  margin-top: 32%;
+  margin-left: 15%;
 }
